--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start": "rollup -c -w",
     "prepare": "yarn run build",
     "predeploy": "cd example && yarn install && yarn run build",
+    "gitpush": "yarn test && git push",
     "deploy": "gh-pages -d example/build",
     "publish": "npm publish --access=public",
     "storybook": "start-storybook -p 6006",
