--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "dist"
   ],
   "dependencies": {
-    "@material-ui/core": "3"
+    "@material-ui/core": "3",
+    "@material-ui/icons": "^4.0.1"
   }
 }
